# tracer-workspace

./: .gitignore  CHECK_VALIDATION_STATUS.bat  CLAUDE.md  CNAME  EDITORIAL.md  EFFICIENT_ID_VALIDATION_SETUP.md  ID_VALIDATION_WORKFLOW_GUIDE.md  Princeton_Tracer_Master_Guide.html  Proofreading Protocol_ Three-Round Triage System.docx  index-legacy.html  index.html
Ground-Truth-Protocol-History/: Copy of Ground Truth Protocol Guidelines Revised.docx  Copy of How to verify ground truth tasks.docx  Copy of Standard Operating Procedure_ Ground Truth (GT) Task Handling.docx  Copy of Updated Ground Truth Checklist.docx
Ground-Truth-Training/: Copy of Fly Synapses.docx  Copy of How to Vesicle.docx  Copy of Synapse Stuff.docx  How-to_ VAST.docx
tracer_tools/: .gitignore  BATCH_VALIDATION_SUMMARY.md  CLAUDE.md  DEVELOPMENT_NOTES.md  GOOGLE_SHEETS_SETUP.md  ID_VALIDATION_STATUS.md  PROGRESS_SUMMARY.md  README.md  chatgpt_agent_template.txt  claude_analysis.md  codex_output.md  deepseek_query.py  gemini_output.md  pyproject.toml
tracer_tools/scripts/: VALIDATE_IDS_BATCH_README.md  full_pipeline.py  get_coords_cli.py  monitor_validation.py  process_file_column.py  save_cave_token.py  sheets_coords_oauth.py  sheets_get_coords.py  sheets_get_coords_safe.py  sheets_merge.py  sheets_utils.py  sheets_utils_oauth.py  test_oauth.py  test_sheets_connection.py  update_ids_cli.py  validate_ids_batch.py
tracer_tools/src/tracer_tools/: __init__.py  utils.py
tracer_tools/tests/: Ryan_test_notebook.ipynb  celia_test_notebook.ipynb  jay_test_notebook.ipynb  kyle_test_notebook.ipynb
(+95 files in other folders)
