[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tracer_tools"
version = "0.0.1"
authors = [
  { name="Jay Gager", email="jgager@princeton.edu" },
]
description = "Functions for use by connectomics professionals."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jaybgager/tracer_tools"
Issues = "https://github.com/jaybgager/tracer_tools/issues"